# gp-data-ni-webscraper

./: .gitignore  README.rst  pyproject.toml  pytest.ini  webpage.html
.github/workflows/: ci.yaml  publish.yaml  test.yaml
gp_data_ni_webscraper/: webscraper.py
gp_data_webscraper/: gp_data_webscraper.py
tests/: test_gp_data_webscraper.py  test_webscraper.py
tests/fixtures/: title-csv.html  title-normal.html
